Support for 12.1.2 dynamic cluster and server templates